adjust date and render slides

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -4,6 +4,7 @@ format:
     navigation-mode: vertical
     theme: dc-ldev.scss
     df-print: paged
+    embed-resources: true
 execute: 
   warning: false
   echo: true
