--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -2,9 +2,9 @@ on:
     workflow_dispatch:
     push:
       branches: main
-
+  
 name: Quarto Publish
-
+  
 jobs:
   build-deploy:
     runs-on: ubuntu-latest
@@ -16,6 +16,13 @@ jobs:
 
       - name: Set up Quarto
         uses: quarto-dev/quarto-actions/setup@v2
+
+      - name: Install R
+        uses: r-lib/actions/setup-r@v2
+
+      - name: Install R Dependencies
+        uses: r-lib/actions/setup-renv@v2
+
 
       - name: Render and Publish
         uses: quarto-dev/quarto-actions/publish@v2
